# CLion-CppTask-24.10.2021

./: AllegroApp.cpp  AllegroApp.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Circle.cpp  Circle.hpp  DynamicFigures.cpp  DynamicFigures.hpp  Figure.cpp  Figure.hpp  FigureFactory.cpp  FigureFactory.h  FigureRecord.CPP  FigureRecord.hpp  ISerializable.cpp  ISerializable.h  MovableSquare.cpp  MovableSquare.h  Point.cpp  Point.h  PointImpl.h  Preferences.cpp  Preferences.h  Screen.cpp  Screen.h  Square.cpp  Square.hpp  main.cpp  math2D.cpp  math2D.h
Allegro/: AllegroApp.cpp  AllegroApp.hpp  AllegroBase.hpp
Exceptions/: EApp.cpp  EApp.h  EBorderCollision.cpp  EBorderCollision.h  EDivide.cpp  EDivide.h  EFigureCollision.cpp  EFigureCollision.h  EFigureDeath.cpp  EFigureDeath.h  EHit.cpp  EHit.h  EHitBoth.cpp  EHitBoth.h
Factories/: FigureFactory.cpp  FigureFactory.h
Figures/: Circle.cpp  Circle.hpp  Figure.cpp  Figure.hpp  MovableSquare.cpp  MovableSquare.h  Square.cpp  Square.hpp
Interfaces/: ISerializable.h
